<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="product_placeholder">product name</string>
    <string name="product_quantity">product quantity</string>
    <string name="product_price">product price</string>
    <string name="there_s_nothing_for_now">There\'s nothing for now.</string>
    <string name="empty_start_txt">Start by adding an item</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <string name="editor_activity_title_new_item">Add an Item</string>

    <!-- Title for the activity to edit an existing item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="category_overview">Overview (name, quantity)</string>
    <string name="category_details">Details (price in €, supplier)</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_item_price">Price</string>
    <string name="hint_item_name">Product name</string>

    <string name="unit_item_supplier">Supplier</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="unit_sold">Unit sold</string>
    <string name="select_item_category">Select Item Category</string>
    <string name="reorder">Reorder</string>
    <string name="decrease_button">-</string>
    <string name="increase_button">+</string>

</resources>
