<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/details_layout">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item_category"
                android:layout_width="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_height="80dp"
                />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:paddingBottom="6dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/product_placeholder" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textSize="24sp"
                tools:text="@string/product_quantity" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textSize="24sp"
                tools:text="@string/product_price" />

        </LinearLayout>


        <Button
            android:id="@+id/unit_sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:text="@string/unit_sold"
            android:focusable="false"/>

    </LinearLayout>
</RelativeLayout>
